2002-06-27  Derek Atkins   <derek@ihtfp.com>

	* Create an "owner-report" which prints out a set of Invoice and
	Payment transactions and also an aging report for a single "owner"
	(e.g. Customer or Vendor).  This is still a first pass, so it
	might not be correct.  It uses Lots, but it assumes that the
	Account is periodically closed and re-opened (does not have a
	'start-date').  It still needs to be tied into the main GUI.

	* gncJob: add gncJobRetGUID() and gncJobLookupDirect()

	* gncOwner: add gncOwnerRetGUID()

	* gw-business-core-spec.scm: wrap GncAmountType, GncTaxIncluded
	GncBillTermType, gncInvoiceGetInvoiceFromLot(), gncJobRetGUID(),
	jobJobLookupDirect(), gncOwnerGetEndOwner(),
	gncOwnerGetOwnerFromLot(), gncOwnerRetGUID()

	* business-gnome.scm: add extensions to test the owner-report

	* business-options.scm: add an "owner" option-type

2002-06-25  Derek Atkins   <derek@ihtfp.com>

	* gncOwner.[ch]: Provide functions to store/lookup an owner in a
	Lot's kvp_frame.

	* gncInvoice.c: add implemention of GetPostedLot(); when posting
	to an Account, look for any pre-payment Lots and post to that.  If
	the Invoice total < pre-payment, then autmatically forward the
	payments to a future Lot.  If no pre-payment Lot is found, then
	create a new one.

	* dialog-payment.c: force payment amounts to be positive values
	(you cannot un-pay via this dialog).  Apply payments to open
	Invoice Lots in a FIFO manner (by Due Date).  If there is anything
	left over, then create a pre-payment Lot.

2002-06-24  David Hampton  <hampton@employees.org>

	* src/import-export/ofx/Makefile.am:
	* src/import-export/ofx/README:
	* src/import-export/ofx/gnc-ofx-import.c:
	* src/import-export/ofx/gnc-ofx-import.h:
	* src/import-export/ofx/gncmod-ofx-import.c:
	* src/import-export/ofx/ofx-import.scm: Benoit Gregoire's changes
	to make the OFX import module build its own menu item at runtime.
	
	* src/gnome-utils/gnc-mdi-utils.c: 
	* src/gnome/dialog-price-edit-db.c: 