@@ -2588,7 +2588,7 @@ gnc_register_close_cb (GtkWidget *widget, gpointer data)
 }
 
 static int
-report_helper (RegWindow *regData, Query *query)
+report_helper (RegWindow *regData, Split *split, Query *query)
 {
   SplitRegister *reg = gnc_ledger_display_get_split_register (regData->ledger);
   Account *account;
@@ -2600,69 +2600,64 @@ report_helper (RegWindow *regData, Query *query)
 
   args = SCM_EOL;
 
-  switch (reg->type) {
-  case PAYABLE_REGISTER:
-  case RECEIVABLE_REGISTER:
-    g_return_val_if_fail (query == NULL, -1);
+  func = gh_eval_str ("gnc:register-report-create");
+  g_return_val_if_fail (gh_procedure_p (func), -1);
 
-    if (reg->type == PAYABLE_REGISTER)
-      func = gh_eval_str ("gnc:payables-report-create");
-    else
-      func = gh_eval_str ("gnc:receivables-report-create");
-    g_return_val_if_fail (gh_procedure_p (func), -1);
+  /* FIXME: when we drop support older guiles, drop the (char *) coercion. */
+  arg = gh_str02scm ((char *) gnc_split_register_get_credit_string (reg));
+  args = gh_cons (arg, args);
 
-    qtype = gh_eval_str("<gnc:Account*>");
-    g_return_val_if_fail (qtype != SCM_UNDEFINED, -1);
+  /* FIXME: when we drop support older guiles, drop the (char *) coercion. */
+  arg = gh_str02scm ((char *) gnc_split_register_get_debit_string (reg));
+  args = gh_cons (arg, args);
 
-    account = gnc_ledger_display_leader (regData->ledger);
+  str = gnc_reg_get_name (regData, FALSE);
+  arg = gh_str02scm (str);
+  args = gh_cons (arg, args);
+  g_free (str);
 
-    arg = gw_wcp_assimilate_ptr (account, qtype);
-    args = gh_cons (arg, args);
-    g_return_val_if_fail (arg != SCM_UNDEFINED, -1);
+  arg = gh_bool2scm (reg->use_double_line);
+  args = gh_cons (arg, args);
 
-    break;
+  arg = gh_bool2scm (reg->style == REG_STYLE_JOURNAL);
+  args = gh_cons (arg, args);
 
-  default:
-    if (!query)
-    {
-      query = gnc_ledger_display_get_query (regData->ledger);
-      g_return_val_if_fail (query != NULL, -1);
-    }
-
-    func = gh_eval_str ("gnc:register-report-create");
-    g_return_val_if_fail (gh_procedure_p (func), -1);
-
-    /* FIXME: when we drop support older guiles, drop the (char *) coercion. */
-    arg = gh_str02scm ((char *) gnc_split_register_get_credit_string (reg));
-    args = gh_cons (arg, args);
-
-    /* FIXME: when we drop support older guiles, drop the (char *) coercion. */
-    arg = gh_str02scm ((char *) gnc_split_register_get_debit_string (reg));
-    args = gh_cons (arg, args);
-
-    str = gnc_reg_get_name (regData, FALSE);
-    arg = gh_str02scm (str);
-    args = gh_cons (arg, args);
-    g_free (str);
-
-    arg = gh_bool2scm (reg->use_double_line);
-    args = gh_cons (arg, args);
-
-    arg = gh_bool2scm (reg->style == REG_STYLE_JOURNAL);
-    args = gh_cons (arg, args);
-
-    qtype = gh_eval_str("<gnc:Query*>");
-    g_return_val_if_fail (qtype != SCM_UNDEFINED, -1);
-
-    arg = gw_wcp_assimilate_ptr (query, qtype);
-    args = gh_cons (arg, args);
-    g_return_val_if_fail (arg != SCM_UNDEFINED, -1);
-
-    arg = gh_bool2scm (FALSE);
-    args = gh_cons (arg, args);
-
-    break;
+  if (!query)
+  {
+    query = gnc_ledger_display_get_query (regData->ledger);
+    g_return_val_if_fail (query != NULL, -1);
   }
+
+  qtype = gh_eval_str("<gnc:Query*>");
+  g_return_val_if_fail (qtype != SCM_UNDEFINED, -1);
+
+  arg = gw_wcp_assimilate_ptr (query, qtype);
+  args = gh_cons (arg, args);
+  g_return_val_if_fail (arg != SCM_UNDEFINED, -1);
+
+
+  if (split)
+  {
+    qtype = gh_eval_str("<gnc:Split*>");
+    g_return_val_if_fail (qtype != SCM_UNDEFINED, -1);
+    arg = gw_wcp_assimilate_ptr (split, qtype);
+  }
+  else
+  {
+    arg = SCM_BOOL_F;
+  }
+  args = gh_cons (arg, args);
+  g_return_val_if_fail (arg != SCM_UNDEFINED, -1);
+
+
+  qtype = gh_eval_str("<gnc:Account*>");
+  g_return_val_if_fail (qtype != SCM_UNDEFINED, -1);
+
+  account = gnc_ledger_display_leader (regData->ledger);
+  arg = gw_wcp_assimilate_ptr (account, qtype);
+  args = gh_cons (arg, args);
+  g_return_val_if_fail (arg != SCM_UNDEFINED, -1);
+
 
   /* Apply the function to the args */
   arg = gh_apply (func, args);
@@ -2684,7 +2679,7 @@ gnc_register_report_account_cb (GtkWidget *widget, gpointer data)
   RegWindow *regData = data;
   int id;
 
-  id = report_helper (regData, NULL);
+  id = report_helper (regData, NULL, NULL);
   if (id >= 0)
     reportWindow (id);
 }
@@ -2718,7 +2713,7 @@ gnc_register_report_trans_cb (GtkWidget *widget, gpointer data)
   xaccQueryAddGUIDMatch (query, xaccSplitGetGUID (split),
                          GNC_ID_SPLIT, QUERY_AND);
 
-  id = report_helper (regData, query);
+  id = report_helper (regData, split, query);
   if (id >= 0)
     reportWindow (id);
 }
@@ -2736,7 +2731,7 @@ gnc_register_print_cb (GtkWidget *widget, gpointer data)
   RegWindow *regData = data;
   int id;
 
-  id = report_helper (regData, NULL);
+  id = report_helper (regData, NULL, NULL);
   if (id >= 0)
     gnc_print_report (id);
 }
