@@ -6,12 +6,66 @@
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 (define-module (gnucash report standard-reports))
+(use-modules (ice-9 slib))
+(use-modules (gnucash main)) ;; FIXME: delete after we finish modularizing.
 
 (export gnc:register-report-create)
-(export gnc:payables-report-create)
-(export gnc:receivables-report-create)
+(export gnc:register-report-hook)
 
-(use-modules (gnucash main)) ;; FIXME: delete after we finish modularizing.
+(require 'hash-table)
+(require 'record)
+
+(define gnc:*register-report-hash* (make-hash-table 23))
+
+;; Keep a hash-table of records, keyed off the account type.  Each
+;; record contains a function pointer for that account-type with split
+;; or without split.  If no function is found, then run the 'default'
+;; function
+
+(define acct-type-info (make-record-type "AcctTypeInfo" '(split non-split)))
+
+(define make-acct-type-private
+  (record-constructor acct-type-info '(split non-split)))
+
+(define (make-acct-type)
+  (make-acct-type-private #f #f))
+
+(define get-split
+  (record-accessor acct-type-info 'split))
+
+(define set-split
+  (record-modifier acct-type-info 'split))
+
+(define get-non-split
+  (record-accessor acct-type-info 'non-split))
+
+(define set-non-split
+  (record-modifier acct-type-info 'non-split))
+
+(define (gnc:register-report-hook acct-type split? create-fcn)
+  (let ((type-info (hash-ref gnc:*register-report-hash* acct-type)))
+
+    (if (not type-info)
+	(set! type-info (make-acct-type)))
+
+    (if split?
+	(set-split type-info create-fcn)
+	(set-non-split type-info create-fcn))
+
+    (hash-set! gnc:*register-report-hash* acct-type type-info)))	
+
+(define (lookup-register-report acct-type split)
+  (let ((type-info (hash-ref gnc:*register-report-hash* acct-type)))
+    (gnc:debug "acct-type: " acct-type)
+    (gnc:debug "ref: " type-info)
+    (gnc:debug "hash: " gnc:*register-report-hash*)
+    (gnc:debug "split: " split)
+    (if type-info
+	(if split
+	    (begin (gnc:debug "get-split...") (get-split type-info))
+	    (begin (gnc:debug "get-non-split...") (get-non-split type-info)))
+	#f)))
+
 (use-modules (gnucash report account-piecharts))
 (use-modules (gnucash report account-summary))
 (use-modules (gnucash report average-balance))
@@ -26,6 +80,17 @@
 (use-modules (gnucash report register))
 (use-modules (gnucash report transaction))
 
-(define gnc:register-report-create gnc:register-report-create-internal)
-(define gnc:payables-report-create gnc:payables-report-create-internal)
-(define gnc:receivables-report-create gnc:receivables-report-create-internal)
+(use-modules (gnucash gnc-module))
+(gnc:module-load "gnucash/engine" 0)
+
+(define (gnc:register-report-create account split query journal? double?
+				    title debit-string credit-string)
+  (let* ((acct-type-code (gnc:account-get-type account))
+	 (acct-type (gw:enum-<gnc:AccountType>-val->sym acct-type-code #f))
+	 (create-fcn (lookup-register-report acct-type split)))
+    (gnc:debug "create-fcn: " create-fcn)
+    (if create-fcn
+	(create-fcn account split query journal? double? title
+		    debit-string credit-string)
+	(gnc:register-report-create-internal #f query journal? double? title
+					     debit-string credit-string))))
